Fixed expand button not showing when using javascript

--- a/playlist.css
+++ b/playlist.css
@@ -1,3 +1,6 @@
+html, body {
+  height: 100%;
+}
 #top-bar-header {
   position: fixed;
   top: 0;
@@ -54,6 +57,7 @@
   padding-top: 48px;
   position:static;
   z-index: 0;
+  min-height: 100%;
 }
 
 .purple-button {
@@ -103,7 +107,7 @@
 .music-title {
   color: #835797;
 }
-.playlist-expand-button {
+.music-item-button {
   float: right;
   font-size: 200%;
   color: #808080;
